--- a/css/styles.css
+++ b/css/styles.css
@@ -66,3 +66,10 @@ body {
     width: 60%;
     margin: 3% auto;
 }
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
