--- a/css/styles.css
+++ b/css/styles.css
@@ -55,11 +55,13 @@ body {
 .custom-reserve-btn {
     padding-left: 20%;
     padding-right: 20%;
+    color: white;
 }
 
-.reserve-btn {
-    margin-left: 17%;
-    margin-top: 2%;
+#reserve-table {
+    color: black;
+    margin-bottom: 30px;
+    width: 90%;
 }
 
 .card-wrapper {
@@ -88,3 +90,24 @@ body {
     left: 0;
     min-height: 300px;
 } 
+
+.modal-dialog {
+    padding: 10px 10px 10px 10px;
+}
+
+.custom-modal-title {
+    color: #0f0f0f;
+}
+
+.reserve-btn {
+    margin-left: 17%;
+    margin-top: 0%;
+}
+
+.custom-modal {
+    max-width: 800px;
+}
+
+.custom-section-btn {
+    margin-bottom: 15%;
+}
