--- a/css/styles.css
+++ b/css/styles.css
@@ -111,3 +111,10 @@ body {
 .custom-section-btn {
     margin-bottom: 15%;
 }
+
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
