--- a/css/styles.css
+++ b/css/styles.css
@@ -1,120 +1,57 @@
-.row-header{
-    margin:0px auto;
-    padding:0px;
+.row-header {
+  margin: 0px auto;
+  padding: 0px 0px;
 }
-
 .row-content {
-    margin:0px auto;
-    padding: 50px 0px 50px 0px;
-    border-bottom: 1px ridge;
-    min-height:400px;
+  margin: 0px auto;
+  padding: 50px 0px;
+  border-bottom: 1px ridge;
+  min-height: 400px;
 }
-
-.footer{
-    background-color: #D1C4E9;
-    margin:0px auto;
-    padding: 20px 0px 20px 0px;
+.footer {
+  background-color: #D1C4E9;
+  margin: 0px auto;
+  padding: 20px 0px;
 }
-
 .jumbotron {
-    padding:70px 30px 70px 30px;
-    margin:0px auto;
-    background: #9575CD;
-    color:floralwhite;
+  margin: 0px auto;
+  padding: 70px 30px;
+  background: #9575CD;
+  color: floralwhite;
 }
-
-address{
-    font-size:80%;
-    margin:0px;
-    color:#0f0f0f;
+address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
 }
-
 body {
-    padding: 50px 0px 0px 0px;
-    z-index: 0;
+  padding: 50px 0px 0px 0px;
+  z-index: 0;
 }
-
 .navbar-dark {
-    background-color: #512DA8;
+  background-color: #512DA8;
 }
-
-.promotions {
-    align-items: center;
-}
-
-.custom-header {
-    background-color: orange;
-    color: white;
-    font-size: 24px;
-}
-
-.reserve-btn-wrapper {
-    text-align: right;
-}
-
-.custom-reserve-btn {
-    padding-left: 20%;
-    padding-right: 20%;
-    color: white;
-}
-
-#reserve-table {
-    color: black;
-    margin-bottom: 30px;
-    width: 90%;
-}
-
-.card-wrapper {
-    width: 60%;
-    margin: 3% auto;
-}
-
 .tab-content {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
 }
-
 .carousel {
-    background:#512DA8;
+  background: #512DA8;
 }
-
-.carousel-item {
+.carousel .carousel-item {
   height: 300px;
 }
-
-.carousel-item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 300px;
-} 
-
-.modal-dialog {
-    padding: 10px 10px 10px 10px;
+.carousel .carousel-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px;
 }
-
-.custom-modal-title {
-    color: #0f0f0f;
-}
-
-.reserve-btn {
-    margin-left: 17%;
-    margin-top: 0%;
-}
-
-.custom-modal {
-    max-width: 800px;
-}
-
-.custom-section-btn {
-    margin-bottom: 15%;
-}
-
 #carouselButton {
-    right:0px;
-    position: absolute;
-    bottom: 0px;
-    z-index: 1;
+  right: 0px;
+  position: absolute;
+  bottom: 0px;
+  z-index: 1;
 }
