--- a/css/styles.less
+++ b/css/styles.less
@@ -69,6 +69,65 @@ body{
     }
 }
 
+.promotions {
+    align-items: center;
+  }
+  
+  .custom-header {
+    background-color: orange;
+    color: white;
+    font-size: 24px;
+  }
+  
+  .reserve-btn-wrapper {
+    text-align: right;
+  }
+  
+  .custom-reserve-btn {
+    padding-left: 20%;
+    padding-right: 20%;
+    color: white;
+  }
+  
+  #reserve-table {
+    color: black;
+    margin-bottom: 30px;
+    width: 90%;
+  }
+  
+  .card-wrapper {
+    width: 60%;
+    margin: 3% auto;
+  }
+  
+  .tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+  }
+  
+  .modal-dialog {
+    padding: 10px 10px 10px 10px;
+  }
+  
+  .custom-modal-title {
+    color: #0f0f0f;
+  }
+  
+  .reserve-btn {
+    margin-left: 17%;
+    margin-top: 0%;
+  }
+  
+  .custom-modal {
+    max-width: 800px;
+  }
+  
+  .custom-section-btn {
+    margin-bottom: 15%;
+  }  
+
 #carouselButton {
     right:0px;
     position: absolute;
